# iobuffer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  bidefine.h  clib.json  iobuffer.c  iobuffer.h  vbiprintf.c  vbiscanf.c
.github/workflows/: build.yml
cmake/: iobuffer-config.cmake.in
include/iobuffer/: iobuffer.h
src/: bidefine.h  iobuffer.c  vbiprintf.c  vbiscanf.c
tests/: CMakeLists.txt  berase.c  bsetalloc.c  test.h
tests/src/: bclose.c  beob.c  berase.c  bgetc.c  bgetpos.c  bgets.c  bmemopen.c  bopen.c  bpeek.c  bprintf.c  bputc.c  bputs.c  bread.c  breset.c  brewind.c  bscanf.c  bseek.c  bsetalloc.c  bsetpos.c  btell.c  bungetc.c  bview.c  bwrite.c  test.h
